src/test/deca/context/invalid/SansObjet/PrimaryExpr7-Cast-InvalidAssign.deca
// Description:
//    Invalid assignment of a casted expression.
//
// Results:
//    11:20: (RULE 3.28) Incompatible type assignment
//
// Historique:
//    cree le 13/01/2022

{
        int x = (float)(3);
}
